<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraActivity">

    <EditText
        android:id="@+id/txtNumero1"
        android:layout_width="152dp"
        android:layout_height="52dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/txtNumero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtNumero2"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="58dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNumero1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"

        android:text="@string/btnSuma"
        app:layout_constraintEnd_toStartOf="@+id/btnResta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumero1" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="82dp"
        android:text="@string/btnResta"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSuma"
        app:layout_constraintTop_toBottomOf="@+id/txtNumero2" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="24dp"

        android:text="@string/btnMultiplicar"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="82dp"
        android:text="@string/btnDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicar"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="345dp"
        android:text="@string/resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumero2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="174dp"
        android:text="@string/tituloCalculadora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>